removed twitter link, fixed gap between icons

--- a/src/style/contact/contact.css
+++ b/src/style/contact/contact.css
@@ -126,7 +126,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 #contactSection .icons .icon {
